<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bloomy</string>
    <string name="img_logo_bloomy_splash">Image Logo Bloomy Splash</string>
    <string name="img_background_home">Image Background Home</string>
    <string name="btn_get_started_home">Mulai</string>
    <string name="tv_title_home">Berlayar ke\nKeindahan Laut</string>
    <string name="tv_subtitle_home">Biarkan Gelombang Inovasi\nMenggema Melodi\nKemakmuran Maritim</string>
    <string name="img_logo_bloomy_sign_in">Image Logo Bloomy Sign In</string>
    <string name="img_bottom_sheet_sign_in">Image Bottom Sheet Sign In</string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="et_hint_email_sign_in">example@gmail.com</string>
    <string name="et_hint_password_sign_in">••••••••</string>
    <string name="tv_title_sign_in">Masuk</string>
    <string name="tv_subtitle_sign_in">Masuk ke akun Anda</string>
    <string name="tv_email_sign_in">Email</string>
    <string name="tv_password_sign_in">Password</string>
    <string name="tv_sign_up_hint">Belum memiliki akun?</string>
    <string name="tv_forgot_password_dialog">Lupa Password</string>
    <string name="tv_description_forgot_password_dialog">Tolong sertakan alamat\nemail yang Anda gunakan\nsaat mendaftar akun Anda</string>
    <string name="et_hint_email_forgot_password_dialog">example@gmail.com</string>
    <string name="img_bottom_sheet_sign_up">Image Bottom Sheet Sign Up</string>
    <string name="btn_resend_verification">Kirim Link</string>
    <string name="et_hint_username_sign_up">example</string>
    <string name="et_hint_email_sign_up">example@gmail.com</string>
    <string name="et_hint_password_sign_up">••••••••</string>
    <string name="et_hint_confirm_password_sign_up">••••••••</string>
    <string name="tv_title_sign_up">Daftar</string>
    <string name="tv_subtitle_sign_up">Buat akun baru Anda</string>
    <string name="tv_username_sign_up">Username</string>
    <string name="tv_email_sign_up">Email</string>
    <string name="tv_password_sign_up">Password</string>
    <string name="tv_confirm_password_sign_up">Konfirmasi Password</string>
    <string name="tv_sign_in_hint">Sudah punya akun?</string>
    <string name="tv_or_sign_up">Atau</string>
    <string name="tv_resend_verification_hint">Link verifikasi kadaluwarsa?</string>
    <string name="tv_send_verification_link_dialog">Kirim Link Verifikasi</string>
    <string name="tv_description_send_verification_link_dialog">Tolong sertakan alamat\nemail yang Anda gunakan\nsaat mendaftar akun Anda</string>
    <string name="et_hint_email_send_verification_link_dialog">example@gmail.com</string>
    <string name="img_background_sign_up_success">Image Background Sign Up Success</string>
    <string name="img_space_sign_up_success">Image Space Sign Up Success</string>
    <string name="btn_continue_sign_up_success">Lanjutkan</string>
    <string name="tv_title_sign_up_success">Akun Anda\ntelah berhasil\ndibuat</string>
    <string name="tv_subtitle_sign_up_success">Silahkan cek link verifikasi pada\nemail Anda untuk mengaktifkan akun</string>
    <string name="img_location_sail_decision">Image Location Sail Decision</string>
    <string name="img_outlook_sail_decision">Image Outlook Sail Decision</string>
    <string name="img_humidity_sail_decision">Image Humidity Sail Decision</string>
    <string name="img_wind_speed_sail_decision">Image Wind Speed Sail Decision</string>
    <string name="img_wind_direction_sail_decision">Image Wind Direction Sail Decision</string>
    <string name="img_bottom_sheet_dashboard">Image Bottom Sheet Dashboard</string>
    <string name="img_top_news">Image Top News</string>
    <string name="img_today_news">Image Today News</string>
    <string name="tv_hello_username">Halo, %s</string>
    <string name="tv_welcome_back">Selamat Datang</string>
    <string name="tv_location_sail_decision">Jakarta, Indonesia</string>
    <string name="tv_outlook_sail_decision">Day Cloudy</string>
    <string name="tv_temperature_sail_decision">21°C</string>
    <string name="tv_humidity_sail_decision">70%</string>
    <string name="tv_wind_speed_sail_decision">3m/s</string>
    <string name="tv_wind_direction_sail_decision">NNW</string>
    <string name="tv_description_sail_decision">Today is a good day to sail</string>
    <string name="tv_top_news_dashboard">Berita Utama</string>
    <string name="tv_top_news">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="tv_today_news_dashboard">Berita Hari Ini</string>
    <string name="tv_title_today_news">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="tv_date_today_news">20 Nov 2023, 12:21 WIB</string>
    <string name="tv_read_more_today_news">Baca Detail</string>
    <string name="title_fish_grading">Penentuan Kualitas Ikan</string>
    <string name="img_fish_grading">Image Fish Grading</string>
    <string name="img_bottom_sheet_fish_grading">Image Bottom Sheet Fish Grading</string>
    <string name="tv_title_fish_grading">Berikan tingkatan pada ikan Anda\nungkapkan kualitas setiap tangkapan!</string>
    <string name="title_market">Market</string>
    <string name="search_bar_market">Cari Bloomy</string>
    <string name="tab_layout_grade_market">Grade</string>
    <string name="img_bottom_sheet_market">Image Bottom Sheet Market</string>
    <string name="tv_title_market">Navigasi gelombang\ntemukan ikan yang sempurna!</string>
    <string name="tv_fresh_catch_market">Tangkapan Segar Hari Ini</string>
    <string name="img_fresh_catch_market">Image Fresh Catch Market</string>
    <string name="img_grade_fresh_catch_market">Image Grade Fresh Catch Market</string>
    <string name="img_location_fresh_catch_market">Image Location Fresh Catch Market</string>
    <string name="tv_title_fresh_catch_market">Lorem Ipsum Fish</string>
    <string name="tv_grade_fresh_catch_market">A</string>
    <string name="tv_price_fresh_catch_market">Rp50.000/kg</string>
    <string name="tv_quantity_fresh_catch_market">20 kg left</string>
    <string name="tv_location_fresh_catch_market">Jakarta Utara</string>
    <string name="img_market_grade_product">Image Market Grade Product</string>
    <string name="img_favorite_market_grade_product">Image Favorite Market Grade Product</string>
    <string name="img_location_market_grade_product">Image Location Market Grade Product</string>
    <string name="tv_title_market_grade_product">Lorem Ipsum Fish</string>
    <string name="tv_price_market_grade_product">Rp50.000/kg</string>
    <string name="tv_quantity_market_grade_product">20 kg left</string>
    <string name="tv_location_market_grade_product">Jakarta Utara</string>
    <string name="title_market_search_product">Cari Produk</string>
    <string name="search_bar_market_product">Cari Bloomy</string>
    <string name="img_bottom_sheet_market_search_product">Image Bottom Sheet Market Search Product</string>
    <string name="tv_description_market_search_product">Menampilkan 0 hasil</string>
    <string name="search_result_single">hasil</string>
    <string name="search_result_plural">hasil</string>
    <string name="search_description">Menampilkan %d %s untuk \"%s\"</string>
    <string name="img_market_search_product">Image Market Search Product</string>
    <string name="img_grade_market_search_product">Image Grade Market Search Product</string>
    <string name="img_location_market_search_product">Image Location Market Search Product</string>
    <string name="tv_title_market_search_product">Lorem Ipsum Fish</string>
    <string name="tv_grade_market_search_product">A</string>
    <string name="tv_price_market_search_product">Rp50.000/kg</string>
    <string name="tv_quantity_market_search_product">20 kg left</string>
    <string name="tv_location_market_search_product">Jakarta Utara</string>
    <string name="title_product_detail">Detail Produk</string>
    <string name="img_market_product_detail">Image Market Product Detail</string>
    <string name="img_bottom_sheet_market_product_detail">Image Bottom Sheet Market Product Detail</string>
    <string name="img_grade_sheet_market_product_detail">Image Grade Sheet Market Product Detail</string>
    <string name="img_favorite">Image Favorite</string>
    <string name="img_grade_favorite">Image Grade Favorite</string>
    <string name="img_location_favorite">Image Location Favorite</string>
    <string name="tv_title_favorite">Lorem Ipsum Fish</string>
    <string name="tv_grade_favorite">A</string>
    <string name="tv_price_favorite">Rp50.000/kg</string>
    <string name="tv_quantity_favorite">20 kg left</string>
    <string name="tv_location_favorite">Jakarta Utara</string>
    <string name="img_product_shop_list">Image Product Shop List</string>
    <string name="img_grade_product_shop_list">Image Grade Product Shop List</string>
    <string name="img_favorite_product_shop_list">Image Favorite Product Shop List</string>
    <string name="img_rating_product_shop_list">Image Rating Product Shop List</string>
    <string name="img_divider_product_shop_list">Image Divider Product Shop List</string>
    <string name="tv_title_product_shop_list">Consectetur Fish</string>
    <string name="tv_grade_product_shop_list">A</string>
    <string name="tv_price_product_shop_list">Rp30.000/kg</string>
    <string name="tv_rating_product_shop_list">No Rating</string>
    <string name="tv_sold_product_shop_list">0 Sold</string>
    <string name="img_shop_product_detail">Image Shop Product Detail</string>
    <string name="img_bottom_sheet_shop_product_detail">Image Bottom Sheet Shop Product Detail</string>
    <string name="img_grade_sheet_shop_product_detail">Image Grade Sheet Shop Product Detail</string>
    <string name="img_content_divider_description_shop_product_detail">Image Content Divider Description Shop Product Detail</string>
    <string name="img_background_button_shop_product_detail">Image Background Shop Product Detail</string>
    <string name="img_content_divider_shop_product_detail">Image Content Divider Shop Product Detail</string>
    <string name="tv_title_shop_product_detail">Consectetur Fish</string>
    <string name="tv_grade_shop_product_detail">Grade \"A\"</string>
    <string name="tv_price_shop_product_detail">Rp30.000/kg</string>
    <string name="tv_quantity_shop_product_detail">50 kg left</string>
    <string name="tv_hint_description_shop_product_detail">Deskripsi</string>
    <string name="tv_value_description_shop_product_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed tristique, urna ut ullamcorper ullamcorper, ipsum dui commodo mauris, eu congue risus eros a libero. Sed sagittis tincidunt turpis, non tincidunt justo feugiat at. Vestibulum in lacinia nunc. Sed non neque id mauris tincidunt ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed tristique, urna ut ullamcorper ullamcorper, ipsum dui commodo mauris, eu congue risus eros a libero.</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_edit_content_description">Edit content description</string>
    <string name="btn_remove">Hapus</string>
    <string name="btn_remove_content_description">Remove content description</string>
    <string name="default_location">Lokasi</string>
    <string name="default_title">Judul</string>
    <string name="default_grade">Grade</string>
    <string name="default_price">Harga</string>
    <string name="default_quantity">Kuantitas</string>
    <string name="default_description" tools:ignore="TypographyEllipsis">...</string>
    <string name="home">Home</string>
    <string name="grading">Grading</string>
    <string name="market">Market</string>
    <string name="pricing">Pricing</string>
    <string name="profile">Profile</string>
</resources>