<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ShopProductDetailActivity">

    <ImageView
        android:id="@+id/img_shop_product_detail"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:contentDescription="@string/img_shop_product_detail"
        android:scaleType="centerCrop"
        android:src="@color/off_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_shop_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/template_gradient_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_tool_bar_shop_product_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            app:title="@string/title_product_detail"
            app:titleTextColor="@color/off_white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_bottom_sheet_product_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/img_bottom_sheet_shop_product_detail"
        android:src="@drawable/template_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_shop_product_detail" />

    <ImageView
        android:id="@+id/img_grade_sheet_shop_product_detail"
        android:layout_width="130dp"
        android:layout_height="67.5dp"
        android:contentDescription="@string/img_grade_sheet_shop_product_detail"
        android:src="@drawable/template_grade_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_bottom_sheet_product_detail" />

    <TextView
        android:id="@+id/tv_title_shop_product_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/default_title"
        android:textColor="@color/gray_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/img_grade_sheet_shop_product_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_bottom_sheet_product_detail"
        tools:text="@string/tv_title_shop_product_detail" />

    <TextView
        android:id="@+id/tv_grade_shop_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/default_grade"
        android:textColor="@color/off_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/img_grade_sheet_shop_product_detail"
        app:layout_constraintEnd_toEndOf="@id/img_grade_sheet_shop_product_detail"
        app:layout_constraintStart_toStartOf="@id/img_grade_sheet_shop_product_detail"
        app:layout_constraintTop_toTopOf="@id/img_grade_sheet_shop_product_detail"
        tools:text="@string/tv_grade_shop_product_detail" />

    <TextView
        android:id="@+id/tv_price_shop_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/default_price"
        android:textColor="@color/gray_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_shop_product_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_title_shop_product_detail"
        tools:text="@string/tv_price_shop_product_detail" />

    <TextView
        android:id="@+id/tv_quantity_shop_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/default_quantity"
        android:textColor="@color/gray_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_price_shop_product_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_price_shop_product_detail"
        tools:text="@string/tv_quantity_shop_product_detail" />

    <ImageView
        android:id="@+id/img_content_divider_description_shop_product_detail"
        android:layout_width="match_parent"
        android:layout_height="7.5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/img_content_divider_description_shop_product_detail"
        android:src="@drawable/template_content_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity_shop_product_detail"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_hint_description_shop_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tv_hint_description_shop_product_detail"
        android:textColor="@color/gray_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_quantity_shop_product_detail"
        app:layout_constraintTop_toBottomOf="@id/img_content_divider_description_shop_product_detail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hint_description_shop_product_detail"
        app:layout_constraintBottom_toTopOf="@id/img_content_divider_shop_product_Detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_value_description_shop_product_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/default_description"
            android:textColor="@color/gray_dark"
            android:textSize="20sp"
            tools:ignore="VisualLintLongText"
            tools:text="@string/tv_value_description_shop_product_detail" />

    </ScrollView>

    <ImageView
        android:id="@+id/img_content_divider_shop_product_Detail"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/img_content_divider_shop_product_detail"
        android:src="@drawable/template_content_divider"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_product_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_background_button_shop_product_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/img_background_button_shop_product_detail"
        android:src="@drawable/template_background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_content_divider_shop_product_Detail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_product_detail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12.5dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/btn_edit_content_description"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_edit"
        android:textColor="@color/blue_500"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="@color/ripple_white"
        app:strokeColor="@color/blue_500"
        app:strokeWidth="2dp"
        app:icon="@drawable/icon_edit_blue"
        app:iconGravity="textStart"
        app:iconTint="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_remove_product_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_remove_product_detail"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_remove_product_detail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="12.5dp"
        android:contentDescription="@string/btn_remove_content_description"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_remove"
        android:textColor="@color/off_white"
        android:textSize="16sp"
        app:backgroundTint="@color/blue_500"
        app:cornerRadius="10dp"
        app:icon="@drawable/icon_remove"
        app:iconGravity="textStart"
        app:rippleColor="@color/ripple_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_edit_product_detail"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>